# SpeakNest

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/skills/repo-spec-html/: SKILL.md
backend/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
backend/app/: config.py  main.py  schemas.py
backend/app/data/: sentences.json
backend/app/db/: __init__.py  database.py  models.py  repository.py
backend/app/prompts/: conversation.md  feedback.md  shadowing.md
backend/app/routers/: audio.py  chat.py  chat_logic.py  config.py  eval_router.py  health.py  history.py  shadowing.py  tts.py
backend/app/services/: ollama_service.py  shadowing_service.py  stt_service.py  tts_service.py  weak_point_service.py
backend/tests/: conftest.py  conftest_helpers.py  test_audio.py  test_chat.py  test_config.py  test_db.py  test_health.py  test_history.py  test_pronunciation.py  test_shadowing.py  test_tts.py  test_weak_point_service.py
docs/: app-spec.html
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx
frontend/src/pages/: ConversationScreen.css  ConversationScreen.jsx  (+2 more)
scripts/: e2e_checklist.py  setup-ollama-model.sh
services/piper/: Dockerfile  __init__.py  app.py  requirements.txt
services/whisper/: Dockerfile  README.md  app.py  requirements.txt
src/api/: __init__.py  eval_router.py
src/pronunciation/: __init__.py  eval.py
tests/: __init__.py  test_config.py  test_cors.py  test_edge.py  test_evaluate.py  test_health.py  test_llm_context.py  test_mock_data.js  test_normalise.py
(+2 files in other folders)
